--- a/angular-routing-app/src/app/app.component.html
+++ b/angular-routing-app/src/app/app.component.html
@@ -3,9 +3,13 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item nav-link" routerLink="/animals" routerLinkActive="active-menu">Animals</li>
         <li class="nav-item nav-link" routerLink="/fruits" routerLinkActive="active-menu">Fruits</li>
+
+        <li class="nav-item nav-link" [routerLink]="['/generic', 'animals']" routerLinkActive="active-menu"> Animals</li>
+        <li class="nav-item nav-link" [routerLink]="['/generic', 'fruits']" routerLinkActive="active-menu"> Fruits</li>
       </ul>
     </div>
       <router-outlet></router-outlet>
      
       <footer class="bg-light text-center">Hello, I'm a footer 😁</footer>
   </div>
+
